--- a/apps/learn-routing/src/app/components/component-one/component-one.component.scss
+++ b/apps/learn-routing/src/app/components/component-one/component-one.component.scss
@@ -1,3 +1,24 @@
 :host {
-  display: block;
+  --border-radius: 0.6rem;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  max-height: 100%;
+  padding: 0.5rem;
+  gap: 0.25rem;
+}
+
+.tab-container {
+  display: flex;
+  flex-direction: row;
+  height: 1.2rem;
+  gap: 2ch;
+}
+
+.content-container {
+  flex-grow: 1;
+  border: 1px solid hsl(240, 100%, 22%);
+  border-radius: var(--border-radius);
+  padding: var(--border-radius);
 }
